--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="top" style="background-image: url('./img/logo.png')">
     <div class="nav">
         <a href="">联盟</a>
-        <a href="">动态</a>
+        <a href="news.html">动态</a>
         <a href="">行动</a>
         <a href="">队伍</a>
         <a href="">联系</a>
@@ -44,9 +44,68 @@
 <!--news sta-->
 <div class="news">
     <div class="news_out">
-        <div class="news_items"></div>
-        <div class="news_items"></div>
-        <div class="news_items"></div>
+        <div class="news_items">
+            <ul>
+                <li>
+                    <img src="./img/03060901.png" width="100%" alt="">
+                </li>
+                <li>
+                    <img src="./img/icon.png" alt="">
+                    <span>公益新闻</span>
+                </li>
+                <li>
+                    香港明星公益足球新闻发布会
+                </li>
+                <li>
+                    从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
+                </li>
+                <li>
+                    <a href="">
+                        查看更多
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="news_items">
+            <ul>
+                <li>
+                    <img src="./img/03060901.png" width="100%" alt="">
+                </li>
+                <li>
+                    <img src="./img/icon.png" alt="">
+                    <span>公益新闻</span>
+                </li>
+                <li>香港明星公益足球新闻发布会</li>
+                <li>
+                    从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
+                </li>
+                <li>
+                    <a href="">
+                        查看更多
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="news_items">
+            <ul>
+                <li>
+                    <img src="./img/03060901.png" width="100%" alt="">
+                </li>
+                <li>
+                    <img src="./img/icon.png" alt="">
+                    <span>公益新闻</span>
+                </li>
+                <li>香港明星公益足球新闻发布会</li>
+                <li>
+                    从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
+                </li>
+                <li>
+                    <a href="">
+                        查看更多
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <!--news end-->
@@ -54,11 +113,52 @@
 <!--xingdong sta-->
 <div class="xing">
     <div class="dong">
+        <div class="title">
+            公益行动
+            <span></span>
+            <a href="" class="title_more">查看更多</a>
+        </div>
         <div class="xing_out">
-            <div class="xing_items"></div>
-            <div class="xing_items"></div>
-            <div class="xing_items"></div>
-            <div class="xing_items"></div>
+            <div class="xing_items">
+                <ul>
+                    <li>
+                        <img src="./img/03060902.png" width="100%" alt="">
+                    </li>
+                    <li></li>
+                    <li>爱回家，关爱老人，孤寡老人</li>
+                    <li>-- 2018-01-01 --</li>
+                </ul>
+            </div>
+            <div class="xing_items">
+                <ul>
+                    <li>
+                        <img src="./img/03060902.png" width="100%" alt="">
+                    </li>
+                    <li></li>
+                    <li>爱回家，关爱老人，孤寡老人</li>
+                    <li>-- 2018-01-01 --</li>
+                </ul>
+            </div>
+            <div class="xing_items">
+                <ul>
+                    <li>
+                        <img src="./img/03060902.png" width="100%" alt="">
+                    </li>
+                    <li></li>
+                    <li>爱回家，关爱老人，孤寡老人</li>
+                    <li>-- 2018-01-01 --</li>
+                </ul>
+            </div>
+            <div class="xing_items">
+                <ul>
+                    <li>
+                        <img src="./img/03060902.png" width="100%" alt="">
+                    </li>
+                    <li></li>
+                    <li>爱回家，关爱老人，孤寡老人</li>
+                    <li>-- 2018-01-01 --</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
@@ -66,10 +166,123 @@
 
 <!--video sta-->
 <div class="vid">
-    <div class="vid_items"></div>
-    <div class="vid_items"></div>
+    <div class="title">
+        公益视频
+        <span></span>
+        <a href="" class="title_more">查看更多</a>
+    </div>
+    <div>
+        <div class="vid_items">
+            <a href="">
+                <img src="./img/03060903.png" width="100%" alt="">
+                <div class="vid_content">
+                    <span>哈弗大学的学生帮助事物回收和捐赠计划</span>
+                    <p>
+                        哈弗大学的学生帮助事物回收和捐赠计划哈弗大学的学生帮助事物回收和捐赠计划哈弗大学的学生帮助事物回收和捐赠计划哈弗大学的学生帮助事物回收和捐赠计划哈弗大学的学生帮助事物回收和捐赠计划
+                    </p>
+                </div>
+            </a>
+        </div>
+        <div class="vid_items">
+            <a href="">
+                <img src="./img/03060904.png" width="100%" alt="">
+                <span>哈弗大学的学生与难民面对面阿的境况发家水电费交</span>
+                <span>2018-01-01</span>
+            </a>
+            <a href="">
+                <img src="./img/03060904.png" width="100%" alt="">
+                <span>哈弗大学的学生与难民面对面阿的境况发家水电费交</span>
+                <span>2018-01-01</span>
+            </a>
+            <a href="">
+                <img src="./img/03060904.png" width="100%" alt="">
+                <span>哈弗大学的学生与难民面对面阿的境况发家水电费交</span>
+                <span>2018-01-01</span>
+            </a>
+            <a href="">
+                <img src="./img/03060904.png" width="100%" alt="">
+                <span>哈弗大学的学生与难民面对面阿的境况发家水电费交</span>
+                <span>2018-01-01</span>
+            </a>
+        </div>
+    </div>
 </div>
 <!--video end-->
+
+<!--coop sta-->
+<div class="xing" style="background:#c79744">
+    <div class="dong">
+        <div class="title" style="color:white;">
+            公益行动合作伙伴
+            <span style="background: white"></span>
+        </div>
+        <div class="xing_out">
+            <div class="xing_items">
+                <img src="./img/03060905.png" width="100%" alt="">
+            </div>
+            <div class="xing_items">
+                <img src="./img/03060905.png" width="100%" alt="">
+            </div>
+            <div class="xing_items">
+                <img src="./img/03060905.png" width="100%" alt="">
+            </div>
+            <div class="xing_items">
+                <img src="./img/03060905.png" width="100%" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+<!--coop end-->
+
+<!--foot sta-->
+<div class="footer">
+    <div class="foot">
+        <div style="overflow: hidden">
+            <div class="foot_itmes">
+                <dl>
+                    <dt>网站</dt>
+                    <dd>无障碍</dd>
+                    <dd>网站地图</dd>
+                </dl>
+            </div>
+            <div class="foot_itmes">
+                <dl>
+                    <dt>保持联系</dt>
+                    <dd>联系我们</dd>
+                    <dd>地图和方向</dd>
+                    <dd>工作</dd>
+                    <dd>社交媒体</dd>
+                </dl>
+            </div>
+            <div class="foot_itmes">
+                <dl>
+                    <dt>安全与品牌</dt>
+                    <dd>隐私声明</dd>
+                    <dd>举报与侵犯</dd>
+                    <dd>报告安全问题</dd>
+                    <dd>商标声明</dd>
+                </dl>
+            </div>
+            <div class="foot_itmes">
+                <img src="./img/icon_f1.png" alt="">
+                <img src="./img/icon_f2.png" alt="">
+                <img src="./img/icon_f3.png" alt="">
+                <img src="./img/icon_f4.png" alt="">
+                <img src="./img/icon_f5.png" alt="">
+                <img src="./img/icon_f6.png" alt="">
+                <br>
+                <img src="./img/icon_f7.png" alt="">
+                <img src="./img/icon_f8.png" alt="">
+            </div>
+            <div class="foot_itmes">
+                <img src="./img/fot_logo.png" alt="">
+            </div>
+        </div>
+        <div class="heng"></div>
+        <div class="support"><a href="http://www.hantehulian.com/" target="_blank">技术支持:晗特互联</a></div>
+    </div>
+</div>
+<!--foot end-->
 </body>
 <script>
     $(function () {
