--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 <div class="top" style="background-image: url('./img/logo.png')">
     <div class="nav">
-        <a href="">联盟</a>
+        <a href="index.html">联盟</a>
         <a href="news.html">动态</a>
-        <a href="">行动</a>
-        <a href="">队伍</a>
-        <a href="">联系</a>
+        <a href="action.html">行动</a>
+        <a href="team.html">队伍</a>
+        <a href="contact.html">联系</a>
     </div>
     <div class="nav_icons">
         <span><img src="./img/icon_f1.png" alt=""></span>
