--- a/news.html
+++ b/news.html
@@ -22,11 +22,11 @@
 <body>
 <div class="top" style="background-image: url('./img/logo.png')">
     <div class="nav">
-        <a href="">联盟</a>
+        <a href="index.html">联盟</a>
         <a href="news.html">动态</a>
-        <a href="">行动</a>
-        <a href="">队伍</a>
-        <a href="">联系</a>
+        <a href="action.html">行动</a>
+        <a href="team.html">队伍</a>
+        <a href="contact.html">联系</a>
     </div>
     <div class="nav_icons">
         <span><img src="./img/icon_f1.png" alt=""></span>
@@ -36,7 +36,132 @@
 </div>
 
 <div class="banner">
-    <img src="./img/ban1.jpg" alt="">
+    <img src="./img/ban1.jpg" width="100%" alt="">
+</div>
+
+<div class="menu">
+    <div class="menu_heard">
+        <div class="menu_left">
+            <a href="news.html" class="mune_active">联盟新闻</a>
+            <a href="news.html">专题新闻</a>
+            <a href="news.html">公益资讯</a>
+        </div>
+        <div class="menu_right">
+            <span>您的位置</span>
+            <a href="index.html">首页</a>
+            >
+            <span>新闻动态</span>
+        </div>
+    </div>
+    <div class="menu_content">
+        <ul>
+            <li class="menu_items">
+                <div class="item_out">
+                    <div class="item_left">
+                        <img src="./img/03060906.png" width="180" height="240" alt="">
+                    </div>
+                    <div class="item_right">
+                        <div class="dates">
+                            <div class="dates_left">01-01</div>
+                            <div class="dates_right">2018</div>
+                        </div>
+                        <p>
+                            <h2>全国首个公益寻人APP今天在杭州上线</h2>
+                            <span>
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                            </span>
+                        </p>
+                        <div>
+                            <a href="newscontent.html" style="background-image: url('./img/next.jpg')"></a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="menu_items">
+                <div class="item_out">
+                    <div class="item_left">
+                        <img src="./img/03060906.png" width="180" height="240" alt="">
+                    </div>
+                    <div class="item_right">
+                        <div class="dates">
+                            <div class="dates_left">01-01</div>
+                            <div class="dates_right">2018</div>
+                        </div>
+                        <p>
+                        <h2>全国首个公益寻人APP今天在杭州上线</h2>
+                        <span>
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                            </span>
+                        </p>
+                        <div>
+                            <a href="newscontent.html" style="background-image: url('./img/next.jpg')"></a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="menu_items">
+                <div class="item_out">
+                    <div class="item_left">
+                        <img src="./img/03060906.png" width="180" height="240" alt="">
+                    </div>
+                    <div class="item_right">
+                        <div class="dates">
+                            <div class="dates_left">01-01</div>
+                            <div class="dates_right">2018</div>
+                        </div>
+                        <p>
+                        <h2>全国首个公益寻人APP今天在杭州上线</h2>
+                        <span>
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                            </span>
+                        </p>
+                        <div>
+                            <a href="newscontent.html" style="background-image: url('./img/next.jpg')"></a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="menu_items">
+                <div class="item_out">
+                    <div class="item_left">
+                        <img src="./img/03060906.png" width="180" height="240" alt="">
+                    </div>
+                    <div class="item_right">
+                        <div class="dates">
+                            <div class="dates_left">01-01</div>
+                            <div class="dates_right">2018</div>
+                        </div>
+                        <p>
+                        <h2>全国首个公益寻人APP今天在杭州上线</h2>
+                        <span>
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                                全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线全国首个公益寻人APP今天在杭州上线
+                            </span>
+                        </p>
+                        <div>
+                            <a href="newscontent.html" style="background-image: url('./img/next.jpg')"></a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="jump">
+        <div class="jump_left">
+            <a href=""><img src="./img/prev.png" width="20" height="16" alt=""></a>
+            <a href=""><img src="./img/next_pre.png" width="20" height="16" alt=""></a>
+        </div>
+        <div class="jump_right">
+            <a href="">6</a>
+            <a href="">...</a>
+            <a href="">3</a>
+            <a href="">2</a>
+            <a href="" class="jumu_active">1</a>
+        </div>
+    </div>
 </div>
 
 <!--foot sta-->
