--- a/contribution_succ.html
+++ b/contribution_succ.html
@@ -36,22 +36,45 @@
 </div>
 
 <div class="banner">
-    <img src="./img/ban3.jpg" width="100%" alt="">
+    <img src="./img/ban2.jpg" width="100%" alt="">
 </div>
 
 <div class="menu">
     <div class="menu_heard">
         <div class="menu_left">
-            <a href="team.html" class="mune_active">中国</a>
-            <a href="team.html">俄罗斯</a>
-            <a href="team.html">德国</a>
-            <a href="team.html">太平洋区</a>
+            <a href="javascript:;">捐款说明</a>
+            <a href="javascript:;">捐款信息</a>
+            <a href="javascript:;" class="mune_active">完成捐款</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
             <a href="index.html">首页</a>
             >
-            <span>中国</span>
+            <span>捐款</span>
+        </div>
+    </div>
+    <div class="action_fin">
+        <div class="succ">
+            <h2>恭喜您，捐款成功</h2>
+            <p>捐款编号：121231231 [<span>复制编号</span>]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 捐款金额1000元（感谢您的爱心）</p>
+            <div class="youcan">
+                <a href="">您还可以</a>
+                <a href="">返回首页</a>
+                <a href="">撤回，重新捐款</a>
+                <a href="">（如有疑问，请联系我们）</a>
+            </div>
+            <p><span>温馨说明：</span>提示文字</p>
+        </div>
+    </div>
+</div>
+
+<div class="menu">
+    <div class="menu_heard">
+        <div class="menu_left">
+            <a href="javascript:;" class="mune_active">推荐公益</a>
+        </div>
+        <div class="menu_right">
+            <a href="action.html">查看更多>></a>
         </div>
     </div>
     <div class="action">
@@ -73,37 +96,7 @@
                     <img src="./img/03060907.png" width="600" alt="">
                 </div>
             </li>
-            <li class="action_itmes">
-                <div class="action_left">
-                    <div>1</div>
-                    <div>
-                        hollow word
-                        <br>
-                        世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你
-                    </div>
-                    <div class="action_botton">
-                        <a href="javascript:;">世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你</a>
-                        <a href="newscontent.html">详情</a>
-                    </div>
-                </div>
-                <div class="action_right">
-                    <img src="./img/03060907.png" width="600" alt="">
-                </div>
-            </li>
         </ul>
-    </div>
-    <div class="jump">
-        <div class="jump_left">
-            <a href=""><img src="./img/prev.png" width="20" height="16" alt=""></a>
-            <a href=""><img src="./img/next_pre.png" width="20" height="16" alt=""></a>
-        </div>
-        <div class="jump_right">
-            <a href="">6</a>
-            <a href="">...</a>
-            <a href="">3</a>
-            <a href="">2</a>
-            <a href="" class="jumu_active">1</a>
-        </div>
     </div>
 </div>
 <!--foot sta-->
