--- a/action.html
+++ b/action.html
@@ -42,15 +42,15 @@
 <div class="menu">
     <div class="menu_heard">
         <div class="menu_left">
-            <a href="action.html" class="mune_active">联盟新闻</a>
-            <a href="action.html">专题新闻</a>
-            <a href="action.html">公益资讯</a>
+            <a href="action.html" class="mune_active">地震救灾</a>
+            <a href="action.html">自然水灾</a>
+            <a href="action.html">突发火灾</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
             <a href="index.html">首页</a>
             >
-            <span>新闻动态</span>
+            <span>地震救灾</span>
         </div>
     </div>
     <div class="action">
