--- a/contribution_succ.html
+++ b/contribution_succ.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <style>
         .top{
-            /*background-color: white;*/
+            background-color: white;
         }
         .nav>a{
             color: black;
@@ -20,7 +20,7 @@
     <script src="./js/swiper-4.1.6.min.js"></script>
 </head>
 <body>
-<div class="top" style="background-image: url('./img/logo.png')">
+<div class="top" style="background-image: url('./img/logo2.png')">
     <div class="nav">
         <a href="index.html">联盟</a>
         <a href="news.html">动态</a>
@@ -59,8 +59,8 @@
             <p>捐款编号：121231231 [<span>复制编号</span>]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 捐款金额1000元（感谢您的爱心）</p>
             <div class="youcan">
                 <a href="">您还可以</a>
-                <a href="">返回首页</a>
-                <a href="">撤回，重新捐款</a>
+                <a href="index.html">返回首页</a>
+                <a href="contributions_mess.html">撤回，重新捐款</a>
                 <a href="">（如有疑问，请联系我们）</a>
             </div>
             <p><span>温馨说明：</span>提示文字</p>
