--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
                 </li>
                 <li>
-                    <a href="">
+                    <a href="newscontent.html">
                         查看更多
                     </a>
                 </li>
@@ -80,7 +80,7 @@
                     从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
                 </li>
                 <li>
-                    <a href="">
+                    <a href="newscontent.html">
                         查看更多
                     </a>
                 </li>
@@ -100,7 +100,7 @@
                     从伊斯兰教民主到穆斯林民主：革命后突尼斯的伊斯兰主义意思形态拉卡萨丁交罚款了撒减肥了设计费奥斯卡的敬老卡就是对方
                 </li>
                 <li>
-                    <a href="">
+                    <a href="newscontent.html">
                         查看更多
                     </a>
                 </li>
