--- a/newscontent.html
+++ b/newscontent.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <style>
         .top{
-            /*background-color: white;*/
+            background-color: white;
         }
         .nav>a{
             color: black;
@@ -20,7 +20,7 @@
     <script src="./js/swiper-4.1.6.min.js"></script>
 </head>
 <body>
-<div class="top" style="background-image: url('./img/logo.png')">
+<div class="top" style="background-image: url('./img/logo2.png')">
     <div class="nav">
         <a href="index.html">联盟</a>
         <a href="news.html">动态</a>
