--- a/action.html
+++ b/action.html
@@ -43,8 +43,8 @@
     <div class="menu_heard">
         <div class="menu_left">
             <a href="action.html" class="mune_active">地震救灾</a>
-            <a href="action.html">自然水灾</a>
-            <a href="action.html">突发火灾</a>
+            <a href="r.html">自然水灾</a>
+            <a href="f.html">突发火灾</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
