--- a/f.html
+++ b/f.html
@@ -36,28 +36,73 @@
 </div>
 
 <div class="banner">
-    <img src="./img/ban4.jpg" width="100%" alt="">
+    <img src="./img/ban2.jpg" width="100%" alt="">
 </div>
 
 <div class="menu">
     <div class="menu_heard">
         <div class="menu_left">
-            <a href="javascript:;" class="mune_active">捐款说明</a>
-            <a href="javascript:;">捐款信息</a>
-            <a href="javascript:;">完成捐款</a>
+            <a href="action.html">地震救灾</a>
+            <a href="r.html">自然水灾</a>
+            <a href="f.html" class="mune_active">突发火灾</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
-            <a href="index.html">行动</a>
+            <a href="index.html">首页</a>
             >
-            <span>捐赠捐款</span>
+            <span>地震救灾</span>
         </div>
     </div>
-    <div class="contrac_content">
-        <p class="contri_content">
-            捐款说明
-        </p>
-        <a href="contributions_mess.html" class="next">下一步</a>
+    <div class="action">
+        <ul>
+            <li class="action_itmes">
+                <div class="action_left">
+                    <div>1</div>
+                    <div>
+                        hollow word
+                        <br>
+                        世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你
+                    </div>
+                    <div class="action_botton">
+                        <a href="javascript:;">世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你</a>
+                        <a href="newscontent.html">详情</a>
+                    </div>
+                </div>
+                <div class="action_right">
+                    <img src="./img/03060907.png" width="600" alt="">
+                </div>
+            </li>
+            <li class="action_itmes">
+                <div class="action_left">
+                    <div>1</div>
+                    <div>
+                        hollow word
+                        <br>
+                        世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你
+                    </div>
+                    <div class="action_botton">
+                        <a href="javascript:;">世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你世界你好世界你好世界你好世界你好世界你好世界你好世界你好世界你</a>
+                        <a href="newscontent.html">详情</a>
+                    </div>
+                </div>
+                <div class="action_right">
+                    <img src="./img/03060907.png" width="600" alt="">
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="jump">
+        <div class="jump_left">
+            <a href=""><img src="./img/prev.png" width="20" height="16" alt=""></a>
+            <a href=""><img src="./img/next_pre.png" width="20" height="16" alt=""></a>
+        </div>
+        <div class="jump_right">
+            <a href="">6</a>
+            <a href="">...</a>
+            <a href="">3</a>
+            <a href="">2</a>
+            <a href="" class="jumu_active">1</a>
+        </div>
     </div>
 </div>
 
