--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./img/banner.jpg" width="100%" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="./img/banner.jpg" width="100%" alt="">
+            <img src="./img/lunbo2.jpg" width="100%" alt="">
         </div>
         <div class="swiper-slide">
             <img src="./img/banner.jpg" width="100%" alt="">
@@ -221,13 +221,13 @@
                 <img src="./img/03060905.png" width="100%" alt="">
             </div>
             <div class="xing_items">
-                <img src="./img/03060905.png" width="100%" alt="">
+                <img src="./img/coop2.jpg" width="100%" alt="">
             </div>
             <div class="xing_items">
-                <img src="./img/03060905.png" width="100%" alt="">
+                <img src="./img/coop3.jpg" width="100%" alt="">
             </div>
             <div class="xing_items">
-                <img src="./img/03060905.png" width="100%" alt="">
+                <img src="./img/coop4.jpg" width="100%" alt="">
             </div>
         </div>
     </div>
