--- a/team.html
+++ b/team.html
@@ -43,9 +43,9 @@
     <div class="menu_heard">
         <div class="menu_left">
             <a href="team.html" class="mune_active">中国</a>
-            <a href="team.html">俄罗斯</a>
-            <a href="team.html">德国</a>
-            <a href="team.html">太平洋区</a>
+            <a href="e.html">俄罗斯</a>
+            <a href="d.html">德国</a>
+            <a href="t.html">太平洋区</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="action_right">
-                    <img src="./img/03060907.png" width="600" alt="">
+                    <img src="./img/china.jpg" width="600" alt="">
                 </div>
             </li>
             <li class="action_itmes">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="action_right">
-                    <img src="./img/03060907.png" width="600" alt="">
+                    <img src="./img/china.jpg" width="600" alt="">
                 </div>
             </li>
         </ul>
