--- a/g.html
+++ b/g.html
@@ -42,9 +42,9 @@
 <div class="menu">
     <div class="menu_heard">
         <div class="menu_left">
-            <a href="news.html" class="mune_active">联盟新闻</a>
+            <a href="news.html">联盟新闻</a>
             <a href="z.html">专题新闻</a>
-            <a href="g.html">公益资讯</a>
+            <a href="g.html" class="mune_active">公益资讯</a>
         </div>
         <div class="menu_right">
             <span>您的位置</span>
