--- a/z.html
+++ b/z.html
@@ -42,8 +42,8 @@
 <div class="menu">
     <div class="menu_heard">
         <div class="menu_left">
-            <a href="news.html" class="mune_active">联盟新闻</a>
-            <a href="z.html">专题新闻</a>
+            <a href="news.html">联盟新闻</a>
+            <a href="z.html" class="mune_active">专题新闻</a>
             <a href="g.html">公益资讯</a>
         </div>
         <div class="menu_right">
